display inline-block

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/inline.css">
     <link rel="stylesheet" href="css/block.css">
+    <link rel="stylesheet" href="css/inline-block.css">
 </head>
 
 <body>
@@ -23,6 +24,7 @@
         <li class="example-item-inline example-item-inline_third">Terceiro</li>
     </ul>
 
+
     <h2>Display: block</h2>
     <p>O elemento ocupa a linha toda</p>
     <p>É possível definir a Height e a Width</p>
@@ -31,6 +33,18 @@
         <li class="example-item-block example-item-block_first">Primeiro</li>
         <li class="example-item-block example-item-block_second">Segundo</li>
         <li class="example-item-block example-item-block_third">Terceiro</li>
+    </ul>
+
+
+    <h2>Display: inline-block</h2>
+    <p>É possível definir a Height e a Width</p>
+    <p>É possível deixar os elementos na mesma linha</p>
+    <p>É possível herdar o comportamento de palavra do inline</p>
+    </br>
+    <ul class="example-inline-block">
+        <li class="example-item-inline-block example-item-inline-block_first">Primeiro</li>
+        <li class="example-item-inline-block example-item-inline-block_second">Segundo</li>
+        <li class="example-item-inline-block example-item-inline-block_third">Terceiro</li>
     </ul>
 </body>
 
