--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/block.css">
     <link rel="stylesheet" href="css/inline-block.css">
     <link rel="stylesheet" href="css/float.css">
+    <link rel="stylesheet" href="css/position-relative.css">
 </head>
 
 <body>
@@ -86,6 +87,23 @@
         </p>
     </article>
 
+    <!-- ####################  Position  ####################-->
+    <h2>Position: relative</h2>
+    <p>Pode usar 4 propriedades com eles:</p>
+    <p>top</p>
+    <p>bottom</p>
+    <p>left</p>
+    <p>right</p>
+    <p>Pode usar o z-index tbm</p>
+    <div class="elementExamplePositionRelative elementExamplePositionRelative_first">
+        Clique!
+    </div>
+    <div class="elementExamplePositionRelative elementExamplePositionRelative_last">
+        Clique!
+    </div>
+
+
+    <script src="js/position.js"></script>
 </body>
 
 </html>
