html position absolute

--- a/index.html
+++ b/index.html
@@ -102,6 +102,19 @@
         Clique!
     </div>
 
+    <h2>Position: absolute</h2>
+    <p></p>
+    <div class="elementExamplePositionAbsolute elementExamplePositionRelative_first">
+        Apenas uma div
+    </div>
+    <div class="elementExamplePositionAbsolute elementExamplePositionRelative_second">
+        Apenas uma div
+    </div>
+    <div class="elementExamplePositionAbsolute elementExamplePositionRelative_first">
+        <div class="elementExample-internal">Interna</div>
+    </div>
+
+
 
     <script src="js/position.js"></script>
 </body>
